<resources>
    <string name="app_name">DocPortal</string>
    <string name="tvTitle">DocPortal</string>
    <string name="btnAdd">Add Item</string>
    <string name="alertTitle">Enter Item</string>


    <!--    View-->
    <string name="tvViewTitle">Patients</string>
    <!--    common-->
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>

    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="moto">Let\'s help each other..</string>
    <string name="sign_up">Sign Up</string>


    <string name="fname">First Name</string>
    <string name="enterfname">Enter Full Name</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="exName">Full Name</string>
    <string name="exemail">exampleuseremail.com</string>

    <!-- bottum nav bar-->
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="password">Password:</string>
    <string name="dashboard">Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="entercity">Enter your city</string>
    <string name="entercountry">Enter your country</string>

    <string name="feedAvailable">Available Medicines</string>
    <string name="feedContact_btn">Contact</string>
    <string name="feedMedicine_name_1">Acetazolamide Tablets</string>

    <string name="feedMedicine_weight_1">100 g</string>
    <string name="feedMedicine_poster_1">A. B. C. Perera</string>
    <string name="feedMedicine_location_1">Toronto, Canada</string>
    <string name="feedMedicine_qty_1">2 Packs</string>
    <string name="feedMedicine_name_2">Amoxicillin Tablets</string>
    <string name="feedMedicine_weight_2">250 mg</string>
    <string name="feedMedicine_qty_2">3 Packs</string>
    <string name="feedMedicine_poster_2">Mahesh Silva</string>
    <string name="feedMedicine_location_2">London, UK</string>
    <string name="feedMedicine_name_3">Isoniazid Syrup</string>
    <string name="feedMedicine_weight_3">300 ml</string>
    <string name="feedMedicine_qty_3">3 bottles</string>
    <string name="feedMedicine_poster_3">Ihani Saumya</string>
    <string name="feedMedicine_location_3">Sydney, Australia</string>
    <string name="title_add_availableMedicine_1">Add Available</string>
    <string name="title_add_availableMedicine_2">Medicines</string>
    <string name="title_edit_availableMedicine_1">Edit Available</string>
    <string name="moto_addAvailable">Let\'s help each other.....</string>

    <string name="profile">Profile</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine">Medicine</string>
    <string name="favorite">Favorites</string>
    <string name="need_medicine">Need medicines</string>
    <string name="pharmacy">Pharmacies</string>
    <string name="history">My History</string>
    <string name="home">Home</string>
    <string name="availablemedicine">Available Medicines</string>
    <string name="editprofile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="deleteprofile">Delete Profile</string>
    <string name="avFeed_enter_medicineName">Enter Medicine Name</string>
    <string name="avFeed_enter_medicineQty">Enter Quantity you have</string>
    <string name="avFeed_enter_medicineWeight">Enter Medicine Weight</string>
    <string name="avFeed_enter_medicineDescription">Enter Medicine Description</string>
    <string name="addAvailable_btn_submit">SUBMIT</string>
    <string name="addAvailable_btn_cancel">CANCEL</string>
    <string name="addAvailable_btn_save">SAVE</string>
    <string name="tagline_editAvailable">Edit your entered details</string>
    <string name="title_userActivity">My Activity</string>
    <string name="myActivity_userName">Eehanee Saumya</string>
    <string name="myActivity_userLocation">Sydney, Australia</string>
    <string name="myActivity_userEmail">abc@gmail.com</string>
    <string name="avSummary_title_history">Summary</string>
    <string name="avSummary_title_main">Available Medicine</string>
    <string name="summary_btn_edit">Edit</string>
    <string name="summary_btn_delete">Delete</string>
    <string name="pharmacyName">Pharmacy</string>
    <string name="tvPhone">Phone number</string>
    <string name="btnAddPatient">Add new patient</string>
    <string name="tvEmail">Email</string>
    <string name="btnBack">Back</string>
    <string name="tvMobile">+941556562332</string>
    <string name="btnDeletePatient">Delete Patient</string>
    <string name="tvSignInTitle">Sign in</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btnViewPatients">View Patients</string>
    <string name="btnViewUser">View User Profile</string>
    <string name="tvDashboard">Dashboard</string>
    <string name="ageET">Enter Age</string>
    <string name="tvCondition">Medical Condition</string>

    <string name="spinner_prompt_condition">Select a Condition</string>
    <string name="tvAddPatient">Add new patient</string>
    <string name="tvPatients">Patients</string>
    <string name="tvCity">Malabe</string>
    <string name="tvMedicalCondition">Severe</string>
    <string name="tvDashboardUserName">User1</string>
    <string name="tvDashUsername">User1</string>
    <string name="singInUnameET">Type your Username</string>

    <string name="tvViewPatients">Current Patients</string>

</resources>