<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nurse_mobile"
    tools:context=".fragments.Home">

    <!-- TextView in the center -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDashboardUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textColor="#595555"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tvDashUsername" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tvDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Dashboard"
        android:textSize="24sp"
        tools:text="@string/tvDashboard" />

    <!-- Two buttons at the bottom of the page -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnViewPatients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btnViewPatients"
            tools:text="@string/btnViewPatients" />

        <Button
            android:id="@+id/btnViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/btnViewUser"
            tools:text="@string/btnViewUser" />
    </LinearLayout>



</FrameLayout>